Bug 205407 - 'MAC address' UI is mislabelled
Summary: 'MAC address' UI is mislabelled
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: KDED Module (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 204542 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-27 22:37 UTC by Jonathan Thomas
Modified: 2009-08-30 12:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Thomas 2009-08-27 22:37:13 UTC
Version:           svn revision 1013816 (using KDE 4.3.0)
OS:                Linux
Installed from:    Ubuntu Packages

Forwarded from https://launchpad.net/bugs/419933

Original report:
"I set up a wired connection in KDE's network manager using plasma-widget-networkmanagement. [Our package containing KNetworkManager] There is the option to set a custom MAC address for the device, which I need to get identified correctly in our network. However, the MAC address is not set when the connection is established, which causes DHCP to get no configuration.

This behaviour can be verified by syslog and ifconfig respectively. Manual configuration using ifconfig works.

Attached is the corresponding syslog, the hw address is 00:21:70:11:22:33, expected is 00:21:70:55:66:77.
Using plasma-widget-networkmanagement 0.1~svn1013816-0ubuntu1."
Comment 1 Jonathan Thomas 2009-08-27 22:58:17 UTC
Link to attachement: http://launchpadlibrarian.net/30902400/syslog.log
Comment 2 Will Stephenson 2009-08-28 14:36:10 UTC
That setting actually restricts which device the connection can be used on (by mac address) so the UI should actually be labelled 'Device:' and have values 'Any device',<list of network devices of that type from Solid> and allow a user-entered mac address..
Comment 3 Joachim Wilke 2009-08-28 14:55:03 UTC
Thank you for this clarification, so I really misunderstood this feature. 8-)
Comment 4 Will Stephenson 2009-08-30 09:56:36 UTC
SVN commit 1017228 by wstephens:

Correct the 'MAC Address' labelling to 'Restrict To Interface:" and show the
interfaces by Solid product name and kernel name

BUG: 205407


 M  +26 -22    802-11-wireless.ui  
 M  +30 -5     802_11_wirelesswidget.cpp  
 M  +1 -1      CMakeLists.txt  
 M  +21 -26    wired.ui  
 M  +31 -7     wiredwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1017228
Comment 5 Will Stephenson 2009-08-30 12:01:37 UTC
*** Bug 204542 has been marked as a duplicate of this bug. ***