Correct the 'MAC Address' labelling to 'Restrict To Interface:" and show the interfaces by Solid product name and kernel name

BUG: 205407